src/test/ui/issues/issue-52496.stderr
error: float literals must have an integer part
  --> $DIR/issue-52496.rs:4:24
   |
LL |     let _ = Foo { bar: .5, baz: 42 };
   |                        ^^ help: must have an integer part: `0.5`

error: expected one of `,` or `}`, found `.`
  --> $DIR/issue-52496.rs:8:22
   |
LL |     let _ = Foo { bar.into(), bat: -1, . };
   |             ---      ^ expected one of `,` or `}` here
   |             |
   |             while parsing this struct

error: expected identifier, found `.`
  --> $DIR/issue-52496.rs:8:40
   |
LL |     let _ = Foo { bar.into(), bat: -1, . };
   |             ---                        ^ expected identifier
   |             |
   |             while parsing this struct

error[E0063]: missing field `bat` in initializer of `Foo`
  --> $DIR/issue-52496.rs:4:13
   |
LL |     let _ = Foo { bar: .5, baz: 42 };
   |             ^^^ missing `bat`

error[E0063]: missing fields `bar`, `baz` in initializer of `Foo`
  --> $DIR/issue-52496.rs:8:13
   |
LL |     let _ = Foo { bar.into(), bat: -1, . };
   |             ^^^ missing `bar`, `baz`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0063`.
